--- a/_config.yml
+++ b/_config.yml
@@ -25,12 +25,15 @@ description: >- # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://janoamaral.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: logico_ar
+github_username: janoamaral
 
 # Build settings
-theme: minima
 plugins:
   - jekyll-feed
 host: 0.0.0.0
+
+# Split posts over multiple subdirectories called “page2”, “page3”, … “pageN”
+paginate: 10
+paginate_path: "page:num"
