--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,8 @@ url: "https://janoamaral.github.io" # the base hostname & protocol for your site
 twitter_username: logico_ar
 github_username: janoamaral
 
+input: GFM
+
 # Build settings
 plugins:
   - jekyll-feed
