--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,7 @@ plugins:
   - jekyll-feed
   - jekyll-postcss
   - premonition
+  - jekyll-octicons
 host: 0.0.0.0
 
 postcss:
@@ -50,3 +51,17 @@ exclude:
   - postcss.config.js
   - tailwind.config.js
   - yarn.lock
+
+premonition:
+  types:
+    important:
+      meta:
+        my-meta: "Test 3"
+    custombox:
+      meta:
+        my-meta: "Test"
+    advanced:
+      template: "Liquid template goes here"
+      default_title: "MY BLOCK"
+      meta:
+        my-meta: "By myself"
